--- a/uploads/posts/2020_07_04_一万円握りしめてバニーガールズバーに行こう-~ウイスキーの種類には大満足、鏡に映る誘惑の-~.md
+++ b/uploads/posts/2020_07_04_一万円握りしめてバニーガールズバーに行こう-~ウイスキーの種類には大満足、鏡に映る誘惑の-~.md
@@ -12,7 +12,7 @@ tags:
 ---
 ## はじめに
 東急東横線 学芸大学駅から徒歩1分にある「Bunny Girls Bar Radias 学芸大学店」に行ってきました。
-地元の友達と2人で総額22.640円でした。ウイスキーの種類が豊富で、バニーちゃんもかわいくてとっても楽しかったです！
+地元の友達と2人で総額22,640円でした。ウイスキーの種類が豊富で、バニーちゃんもかわいくてとっても楽しかったです！
 
 ## きっかけ
 ここのお店は、引っ越してきたときからめちゃくちゃ気になってました。
@@ -33,15 +33,20 @@ tags:
 50分2980円飲み放題、20分の延長で1580円、チャージは支払い金額の15%、消費税別、声かけなしとのことでした。
 
 ## ドリンクを選ぶ
-最初にドリンクを選んでとのことだったので、ドリンクのメニューに目を通しました。僕はウイスキーが好きなので、ウイスキーの項目に目を通してみると、20種類ほどウイスキーがありました。しかもマッカラン、ボウモアなどなかなか高級なウイスキーもメニューにあったのでとても興奮しました。とりあえず、一番高いであろうマッカランをロックで注文しました。
+最初にドリンクを選んでとのことだったので、ドリンクのメニューに目を通しました。
+
+僕はウイスキーが好きなので、ウイスキーの項目に目を通してみると、20種類ほどウイスキーがありました。しかもマッカラン、ボウモアなどなかなか高級なウイスキーもメニューにあったのでとても興奮しました。とりあえず、一番高いであろうマッカランをロックで注文しました。
 
 ## 鏡を発見！
 女の子がすることもないので、ぼーっと周りを見渡していると、なんということでしょう、壁の下側に鏡が設置されているではありませんか。しかも座っているカウンター席からその鏡をみると、他の席でお相手をしているバニーガールのお尻がしっかりと見える角度。これは一本とられました。「文明の利器こそ鏡なり！」と、先人に思いを馳せてしまいました。
 
 ## バニーガールがきました！
 そうこうしている間に、バニー服を着た女の子がカウンターに歩いてきました。
+
 第一印象めちゃくちゃかわいい。なんとも形容しがたいのですが、AKBに混じってても文句なしというレベルです。
-まず自己紹介から。名前をきくと、胸元にかけていた名札をもち「Kです」と自己紹介してくれました。ここで、名札を見つつ胸にフォーカスがいってると思われたくなかったので、あえてそっけない雰囲気を出します。お互い自己紹介をし、同い年という事実が発覚し、意気投合、お互いタメ語でスタートしました。
+まず自己紹介から。名前をきくと、胸元にかけていた名札をもち「Kです」と自己紹介してくれました。
+
+ここで、名札を見つつ胸にフォーカスがいってると思われたくなかったので、あえてそっけない雰囲気を出します。お互い自己紹介をし、同い年という事実が発覚し、意気投合、お互いタメ語でスタートしました。
 
 ## 最高のひととき
 キャストドリンクとして、Kちゃんにもお酒を入れてあげ、お互いとっても盛り上がりました。ポールダンス、筋トレ、パソコンの話など、色々興味を持って聞いてくれます。ほんとに、コミュニケーションのいろはについては申し分ない満点の接客でした。
@@ -50,7 +55,9 @@ tags:
 そうこうしているとキャストの入れ替えとのことで新しい女の子がきました。しかしながらKちゃんとの会話があまりにも盛り上がりすぎて、入れ替わりなしでKちゃんと延長戦に突入しました。（入れ替えのキャストは正直、性格悪いおばさんという感じだったのは内緒です。）あとから知ったのですが、ここで指名料1480円が発生したっぽいです。
 
 ## ボンジョビを熱唱
-盛り上がりも落ち着き、Kちゃんがカラオケを提案してくれました。なんとこのお店はカラオケ無料、ダーツ投げ放題らしいです。他のお客さんもいるなか少し恥ずかしかったですが、僕のおはこである、Bon Joviの「Livin on a prayer」を歌うことにしました。サビでは、他のお客さんも一緒になって歌ってくれて、歌手ってこんな楽しい気分でライブしてるのかと嫉妬を抱きつつも、「こういう世界を作ってかなきゃなぁ」と一般男性ながらこころに刻みました。
+盛り上がりも落ち着き、Kちゃんがカラオケを提案してくれました。なんとこのお店はカラオケ無料、ダーツ投げ放題らしいです。
+
+他のお客さんもいるなか少し恥ずかしかったですが、僕のおはこである、Bon Joviの「Livin on a prayer」を歌うことにしました。サビでは、他のお客さんも一緒になって歌ってくれて、歌手ってこんな楽しい気分でライブしてるのかと嫉妬を抱きつつも、「こういう世界を作ってかなきゃなぁ」と一般男性ながらこころに刻みました。
 
 ## 連絡先を交換
 カラオケも終わり、そろそろ帰ろうかなぁと思ってるときに、ガールズバーの伝道師である友達がおもむろに連絡先交換を試みました。ここで斜に構えると後悔することは体験済みなので、「俺も欲しい！」と元気良く言ったところ、快く応じてくれました。LINEの交換をしたのですが、もちろんビジネス用アカウント。QRで交換という形ではなく、IDから検索し、友達追加してくれました。
@@ -58,7 +65,9 @@ tags:
 ## 帰る！
 お会計です。なんと2人で22,640円。気づけば延長2回してました。ここが恐ろしいところです。お酒が入ると時間を忘れてしまいます。スマートにカードでと伝え、お会計を終えます。Kちゃんがドアまで見送ってくれます。「ありがとねー、また来るぜ」と快活青年を装い、店を出ました。
 
+## ふっと我に帰る
 そしてここの去り際のKちゃんの顔が現実に引き戻してくれました。
+
 聞き手にまわってぼくたちの話を聴いた疲労感や、次の仕事への倦怠感を表したかのような、顔をしていました。友達もそれに気づいたようで、帰り道に「ガールズバーってのはテーマパークなんだよ」と話をしだしました。
 テーマパークの着ぐるみ同様、キャストの腹のなかを想像するのはNGだと。
 
