タイポ修正

--- a/uploads/posts/2020_07_04_一万円握りしめてバニーガールズバーに行こう-~ウイスキーの種類には大満足、鏡に映る誘惑の-~.md
+++ b/uploads/posts/2020_07_04_一万円握りしめてバニーガールズバーに行こう-~ウイスキーの種類には大満足、鏡に映る誘惑の-~.md
@@ -65,7 +65,7 @@ tags:
 ## 帰る！
 お会計です。なんと2人で22,640円。気づけば延長2回してました。ここが恐ろしいところです。お酒が入ると時間を忘れてしまいます。スマートにカードでと伝え、お会計を終えます。Kちゃんがドアまで見送ってくれます。「ありがとねー、また来るぜ」と快活青年を装い、店を出ました。
 
-## ふっと我に帰る
+## ふっと我に返る
 そしてここの去り際のKちゃんの顔が現実に引き戻してくれました。
 
 聞き手にまわってぼくたちの話を聴いた疲労感や、次の仕事への倦怠感を表したかのような、顔をしていました。友達もそれに気づいたようで、帰り道に「ガールズバーってのはテーマパークなんだよ」と話をしだしました。
